# Dengine

./: .dengine_fios.lua  .dengine_fios_controls.cfg  .dengine_fios_graph.cfg  .dengine_hub_projects.txt  Cargo.toml  MANUAL_USUARIO.md  build_log.txt  check_output.txt  check_output_2.txt  tmpclaude-d6ef-cwd
Assets/.cache/meshes/: 5dad5774be1ba668.dmesh  5e80d2cf0c27782c.dmesh  734a9305a59a875f.dmesh  bf2783d3f81f6b88.dmesh
Assets/.cache/viewport_meshes/: 4e5e9fce6a8937e1.vmesh  5dad5774be1ba668.vmesh  5e80d2cf0c27782c.vmesh  734a9305a59a875f.vmesh  bf2783d3f81f6b88.vmesh  c24caf41e679a01d.vmesh
Assets/Animations/: NewAnimController.animctrl
Assets/Animations/Modules/: acao_principal.animodule  acao_pulo.animodule  camera_3p.animodule  camera_fps.animodule  controlador_animacao.animodule  mapa_teclas.animodule  movimento_avancado.animodule  movimento_basico.animodule
Assets/Assets/: Grama.tif
Assets/Materials/: Meshy_AI__0217192417_texture_Mat.mat  Meshy_AI__0217192431_texture_1_Mat.mat  Meshy_AI__0217192431_texture_2_Mat.mat  Meshy_AI__0217192431_texture_3_Mat.mat  Meshy_AI__0217192431_texture_Mat.mat  NovoMaterial.mat  R1_1_Mat.mat  R1_2_Mat.mat  R1_Mat.mat
Assets/Meshes/: Hallo_8.fbx
Assets/Scripts/: NovoScript.cs
Assets/Shaders/: NewShader.shader
engine_core/: Cargo.toml
engine_core/src/: components.rs  ecs.rs  lib.rs  systems.rs
engine_editor/: Cargo.toml
engine_editor/src/: hierarchy.rs  inspector.rs  lib.rs  viewport.rs
engine_render/: Cargo.toml
engine_render/src/: asset_manager.rs  lib.rs  mesh.rs  renderer.rs  shader.rs
src/: fios.rs  hierarchy.rs  inspector.rs  lib.rs  main.rs  project.rs  terminai.rs  viewport.rs  viewport_gpu.rs
src/fios/: modules.rs
