[package]
name = "Dengine"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
egui_dock = "0.18"
eframe = { version = "0.33.3", features = ["wgpu"] }
epaint = "0.33.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
egui-gizmo = { git = "https://github.com/dumestre/Eguizmo", branch = "main" }
glam = { version = "0.32.0", features = ["mint"] }
raw-window-handle = "0.6.2"
windows-sys = { version = "0.59", features = ["Win32_Graphics_Dwm"] }
rfd = "0.15"
tobj = "4.0"
gltf = "1.4.1"
fbxcel-dom = "0.0.10"
meshopt = "0.6.2"
portable-pty = "0.9"
vt100 = "0.15"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
