[package]
name = "engine_render"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine_core" }
glam = { version = "0.32.0", features = ["mint"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
tobj = "4.0"
gltf = "1.4.1"

[features]
default = []
